Fix for ICE-2131 (dataTable allow for keeping footer visible)

--- a/icefaces/trunk/icefaces/core/src/com/icesoft/faces/resources/css/rime/rime-portlet.css
+++ b/icefaces/trunk/icefaces/core/src/com/icesoft/faces/resources/css/rime/rime-portlet.css
@@ -353,7 +353,7 @@ input.iceSelInpDateClosePopup {
     border-collapse: collapse;
 }
 
-.iceDatTblColHdr, .iceDatTblColHdr1, .iceDatTblColHdr2, .iceDatTblColGrpHdrCol {
+.iceDatTblColHdr, .iceDatTblColHdr1, .iceDatTblColHdr2, .iceDatTblColGrpHdrCol, .iceDatTblFtr {
 /* was iceTblHeader */
     text-align: center;
     font: 11px tahoma;
@@ -388,6 +388,8 @@ input.iceSelInpDateClosePopup {
 
 /*was iceTblHeader */
 .iceDatTblFtr {
+    background: none;
+    border-top: 1px solid #d9d9d9;  
 }
 
 .iceDatTblScrlSpr{ 
@@ -395,6 +397,16 @@ input.iceSelInpDateClosePopup {
     border-top: 1px solid #d9d9d9; 
     border-right: 1px solid #d9d9d9;
 }
+
+.iceDatTblScrlSprFtr{ 
+    border-bottom: 1px solid #d9d9d9;
+    border-right: 1px solid #d9d9d9;        
+}
+
+.iceDatTblScrlSprFtr .iceDatTblFtr{ 
+    border-bottom: none;     
+}
+
 .iceDatTblScrlSpr .iceDatTblColHdr1, .iceDatTblScrlSpr .iceDatTblColHdr2 {
     border-left-style: none;
     border-top-style: none;
